Testing/compilefail/TMP_ToolsError2.cc
#include "TMP_Tools.h"

// Explicit instantiation should not compile:

template struct tmptools::AssertEvenAndDivideBy2<31>;
